# prompt-engineering-lab

./: .env.example  .gitignore  BENCHMARKS.md  CHANGELOG.md  DEPLOY.md  Dockerfile  Makefile  README.md  SECURITY.md  app.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.serena/: project.yml
.streamlit/: config.toml  secrets.toml.example
benchmarks/: RESULTS.md  run_benchmarks.py
demo_data/: sample_tasks.json
docs/adr/: 0001-prompt-versioning-strategy.md  0002-ab-testing-framework.md  0003-safety-checker-design.md
prompt_engineering_lab/: __init__.py  ab_tester.py  cli.py  cost_calculator.py  evaluator.py  optimizer.py  patterns.py  safety.py  template.py  token_counter.py  versioning.py
prompt_lab/: __init__.py  ab_tester.py  benchmark.py  categories.py  evaluator.py  patterns.py  report_generator.py
tests/: conftest.py  test_ab_tester.py  test_benchmark.py  test_categories.py  test_cli.py  test_cost_calculator.py  test_evaluator.py  test_optimizer.py  test_patterns.py  test_pel_patterns.py  test_report_generator.py  test_safety.py  test_template.py  test_token_counter.py  test_versioning.py
