[project]
name = "prompt-engineering-lab"
version = "0.1.0"
description = "Prompt engineering patterns, evaluation, and A/B testing framework"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
