[project]
name = "prompt-engineering-lab"
version = "0.1.0"
description = "Toolkit for prompt engineering techniques — template management, patterns, optimization, A/B testing, token counting, and cost estimation"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "ChunkyTortoise"}]
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
]

[project.scripts]
pel = "prompt_engineering_lab.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
